# puma_robot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: frame_render.h  frame_state.h  frame_update.h  gl_object.h  gui.h  input_handlers.h  input_state.h  log.h  mesh.h  particle_system.h  scene.h  shader_manager.h  systems.h  utils.h
resources/: general.frag  general.vert  null.vert  particle.frag  particle.geom  particle.vert  shadow.geom  shadow.vert  silhouette.frag  silhouette.geom  silhouette.vert
src/: CMakeLists.txt  frame_render.cpp  frame_state.cpp  frame_update.cpp  framebuffer.cpp  gl_object.cpp  gui.cpp  init.cpp  input_handlers.cpp  log.cpp  main.cpp  particle_system.cpp  scene.cpp  shader_manager.cpp  utils.cpp
